Backed out changeset d9d099719789 (bug 1927709) for causing failures at browser_textleafpoint.js. CLOSED TREE
UltraBlame original commit: 4e464842e53849beaeb1667ce3afc2d10860841e

--- a/testing/web-platform/tests/html/dom/elements/the-innertext-and-outertext-properties/innertext-whitespace-pre-line.html
+++ b/testing/web-platform/tests/html/dom/elements/the-innertext-and-outertext-properties/innertext-whitespace-pre-line.html
@@ -319,12 +319,51 @@ mg
 '
 '
 )
-;
 /
 /
 strip
 leading
 spaces
+.
+replace
+(
+/
+\
+n
+\
+n
++
+/
+g
+'
+\
+n
+'
+)
+/
+/
+collapse
+runs
+of
+newlines
+.
+replace
+(
+/
+^
+\
+n
+/
+'
+'
+)
+;
+/
+/
+remove
+any
+initial
+newline
 }
 assert_equals
 (
