Bug 1927408 - Introduce cmd_maximizeWindow and cmd_restoreWindow. r=Gijs
Differential Revision: https://phabricator.services.mozilla.com/D227025

UltraBlame original commit: c8a87f9e8e836eb03ef8da3cfe225748bb705609

--- a/browser/base/content/titlebar-items.inc.xhtml
+++ b/browser/base/content/titlebar-items.inc.xhtml
@@ -126,15 +126,10 @@ titlebar
 -
 max
 "
-oncommand
+command
 =
 "
-window
-.
-maximize
-(
-)
-;
+cmd_maximizeWindow
 "
 data
 -
@@ -165,25 +160,10 @@ titlebar
 -
 restore
 "
-oncommand
+command
 =
 "
-window
-.
-fullScreen
-?
-BrowserCommands
-.
-fullScreen
-(
-)
-:
-window
-.
-restore
-(
-)
-;
+cmd_restoreWindow
 "
 data
 -
