Bug 1922020, part 4  - Remove reliance on window.opener storage access heuristic in user.js from dom/base/test - r=smaug
The helper function here is derived from code you helped design when we were first enabling TCP in xorigin mochitests

Differential Revision: https://phabricator.services.mozilla.com/D224809

UltraBlame original commit: 7d172f2d488cbec1a5d7b183ea96e04305d30be2

--- a/dom/base/test/test_window_close.html
+++ b/dom/base/test/test_window_close.html
@@ -81,17 +81,6 @@ waitForExplicitFinish
 (
 )
 ;
-var
-b
-=
-new
-BroadcastChannel
-(
-"
-windowclose
-"
-)
-;
 const
 link
 =
@@ -222,6 +211,24 @@ true
 ]
 ]
 }
+)
+;
+await
+SimpleTest
+.
+enableLegacyUnpartitionedStorage
+(
+)
+;
+var
+b
+=
+new
+BroadcastChannel
+(
+"
+windowclose
+"
 )
 ;
 for
