--- a/dom/base/test/useractivation/test_popup_blocker_async_callback.html
+++ b/dom/base/test/useractivation/test_popup_blocker_async_callback.html
@@ -394,6 +394,35 @@ testRequestStorageAccess
 aCallback
 )
 {
+SpecialPowers
+.
+pushPermissions
+(
+[
+{
+type
+:
+"
+storageAccessAPI
+"
+allow
+:
+true
+context
+:
+window
+.
+document
+}
+]
+)
+.
+then
+(
+(
+)
+=
+>
 document
 .
 requestStorageAccess
@@ -403,6 +432,7 @@ requestStorageAccess
 then
 (
 aCallback
+)
 )
 ;
 }
