Bug 1919248: transform WPT <to-javascript-url-script-src.html>'s async sub-tests to promise-tests and remove checking the securitypolicyevent's target element. r=smaug
Gecko doesn't set the securitypolicyevent violation's target element,
which prevented the async tests from passing with Gecko.
Setting the violation's target element isn't specified (
https://github.com/w3c/webappsec-csp/issues/687).

Promise-based tests allow removing checking the target element, because
the tests are run in sequence
(https://web-platform-tests.org/writing-tests/testharness-api.html#promise-tests).

Differential Revision: https://phabricator.services.mozilla.com/D227160

UltraBlame original commit: b941985be92395c909b233ecfbba356f6d0db149

--- a/testing/web-platform/tests/content-security-policy/navigation/to-javascript-url-script-src.html
+++ b/testing/web-platform/tests/content-security-policy/navigation/to-javascript-url-script-src.html
@@ -79,6 +79,7 @@ assert_csp_event_for_element
 (
 test
 element
+resolve
 )
 {
 assert_equals
@@ -114,17 +115,6 @@ e
 =
 >
 {
-if
-(
-e
-.
-target
-!
-=
-element
-)
-return
-;
 assert_equals
 (
 e
@@ -184,12 +174,15 @@ remove
 (
 )
 ;
-test
-.
-done
+resolve
 (
 )
 ;
+}
+{
+once
+:
+true
 }
 )
 )
@@ -277,9 +270,17 @@ Fail
 )
 ;
 }
-async_test
+promise_test
 (
 t
+=
+>
+{
+return
+new
+Promise
+(
+resolve
 =
 >
 {
@@ -312,6 +313,7 @@ assert_csp_event_for_element
 (
 t
 i
+resolve
 )
 ;
 document
@@ -323,6 +325,8 @@ appendChild
 i
 )
 ;
+}
+)
 }
 "
 <
@@ -345,9 +349,17 @@ inline
 "
 )
 ;
-async_test
+promise_test
 (
 t
+=
+>
+{
+return
+new
+Promise
+(
+resolve
 =
 >
 {
@@ -367,6 +379,7 @@ assert_csp_event_for_element
 (
 t
 i
+resolve
 )
 ;
 navigate_to_javascript_onload
@@ -384,6 +397,8 @@ appendChild
 i
 )
 ;
+}
+)
 }
 "
 <
@@ -406,9 +421,17 @@ inline
 "
 )
 ;
-async_test
+promise_test
 (
 t
+=
+>
+{
+return
+new
+Promise
+(
+resolve
 =
 >
 {
@@ -462,6 +485,7 @@ assert_csp_event_for_element
 (
 t
 i
+resolve
 )
 ;
 navigate_to_javascript_onload
@@ -479,6 +503,8 @@ appendChild
 i
 )
 ;
+}
+)
 }
 "
 <
@@ -510,9 +536,17 @@ document
 "
 )
 ;
-async_test
+promise_test
 (
 t
+=
+>
+{
+return
+new
+Promise
+(
+resolve
 =
 >
 {
@@ -564,6 +598,7 @@ assert_csp_event_for_element
 (
 t
 i
+resolve
 )
 ;
 navigate_to_javascript_onload
@@ -581,6 +616,8 @@ appendChild
 i
 )
 ;
+}
+)
 }
 "
 <
