Bug 1654541 - fit-content percentage should only clamp when definite. r=emilio,layout-grid-reviewers,TYLin
Differential Revision: https://phabricator.services.mozilla.com/D226204

UltraBlame original commit: c71f9ee49662de564f670c433b2203faa1894018

--- a/testing/web-platform/tests/css/css-grid/layout-algorithm/grid-fit-content-percentage.html
+++ b/testing/web-platform/tests/css/css-grid/layout-algorithm/grid-fit-content-percentage.html
@@ -301,6 +301,17 @@ maxContent
 for
 (
 const
+use_min_width
+of
+[
+false
+true
+]
+)
+{
+for
+(
+const
 use_calc
 of
 [
@@ -437,6 +448,22 @@ className
 item
 "
 ;
+item
+.
+style
+.
+minWidth
+=
+use_min_width
+?
+"
+auto
+"
+:
+"
+0px
+"
+;
 grid
 .
 appendChild
@@ -451,6 +478,15 @@ function
 )
 {
 const
+minWidth
+=
+use_min_width
+?
+minContent
+:
+0
+;
+const
 colSize
 =
 clamp
@@ -460,7 +496,7 @@ percentage
 maxContent
 /
 100
-minContent
+minWidth
 maxContent
 )
 ;
@@ -549,8 +585,23 @@ size
 ;
 }
 value
++
+"
+;
+min
+-
+width
+:
+"
++
+item
+.
+style
+.
+minWidth
 )
 ;
+}
 }
 }
 <
