--- a/testing/web-platform/tests/dom/nodes/moveBefore/tentative/selection-preserve.html
+++ b/testing/web-platform/tests/dom/nodes/moveBefore/tentative/selection-preserve.html
@@ -106,39 +106,6 @@ head
 body
 >
 <
-div
-id
-=
-old_parent
->
-<
-span
-id
-=
-text
->
-Text
-<
-/
-span
->
-<
-/
-div
->
-<
-div
-id
-=
-"
-new_parent
-"
->
-<
-/
-div
->
-<
 /
 body
 >
@@ -150,70 +117,16 @@ use
 strict
 '
 ;
-promise_test
-(
 async
+function
+select_range
+(
 t
-=
->
+anchorNode
+extentNode
+)
 {
-const
-text
-=
-document
-.
-querySelector
-(
-"
-#
-text
-"
-)
-;
-const
-old_parent
-=
-document
-.
-querySelector
-(
-"
-#
-old_parent
-"
-)
-;
-const
-new_parent
-=
-document
-.
-querySelector
-(
-"
-#
-new_parent
-"
-)
-;
-const
-event_watcher
-=
-new
-EventWatcher
-(
-t
-text
-[
-"
-mouseup
-"
-]
-)
-;
-const
-actions_promise
-=
+await
 new
 test_driver
 .
@@ -228,7 +141,7 @@ pointerMove
 {
 origin
 :
-text
+anchorNode
 }
 )
 .
@@ -238,16 +151,16 @@ pointerDown
 .
 pointerMove
 (
-text
+extentNode
 .
 clientWidth
-text
+extentNode
 .
 clientHeight
 {
 origin
 :
-text
+extentNode
 }
 )
 .
@@ -259,16 +172,311 @@ send
 (
 )
 ;
-await
-event_watcher
-.
-wait_for
+}
+promise_test
 (
-[
+async
+t
+=
+>
+{
+document
+.
+body
+.
+innerHTML
+=
+<
+div
+id
+=
+old_parent
+>
+<
+span
+>
+This
+text
+does
+not
+move
+<
+/
+span
+>
+<
+span
+id
+=
+text
+>
+Text
+<
+/
+span
+>
+<
+/
+div
+>
+<
+div
+id
+=
+new_parent
+>
+<
+/
+div
+>
+;
+getSelection
+(
+)
+.
+removeAllRanges
+(
+)
+;
+await
+select_range
+(
+t
+text
+text
+)
+;
+/
+/
+Don
+'
+t
+first
+verify
+that
+getSelection
+(
+)
+.
+anchorNode
+is
+the
+expected
+/
+/
+<
+span
+id
+=
+text
+>
+node
+that
+was
+selected
+above
+.
+If
+we
+did
+that
+then
+at
+/
+/
+least
+in
+Chromium
+browsers
+this
+would
+generate
+a
+new
+Range
+capturing
+the
+/
+/
+visual
+selection
+which
+would
+be
+cached
+to
+the
+internal
+DOMSelection
+/
+/
+object
+.
+Then
+the
+move
+would
+have
+two
+effects
+:
+/
+/
+/
+/
+1
+.
+The
+internal
+visual
+selection
+would
+change
+as
+a
+result
+of
+/
+/
+moveBefore
+(
+)
+/
+/
+2
+.
+But
+the
+Range
+representing
+the
+visual
+selection
+would
+remain
+/
+/
+unchanged
+since
+it
+was
+cached
+to
+the
+DOMSelection
+object
+and
+not
+/
+/
+updated
+during
+moveBefore
+(
+)
+.
+This
+means
+if
+(
+a
+)
+the
+visual
+selection
+/
+/
+and
+(
+b
+)
+the
 "
-mouseup
+API
+-
+returned
 "
-]
+selection
+Range
+are
+out
+of
+sync
+after
+/
+/
+moveBefore
+(
+)
+it
+would
+be
+impossible
+to
+detect
+the
+discrepancy
+/
+/
+without
+a
+reftest
+.
+/
+/
+/
+/
+So
+instead
+we
+will
+just
+dive
+right
+into
+moveBefore
+(
+)
+and
+then
+compute
+/
+/
+the
+selection
+range
+*
+after
+*
+which
+will
+accurately
+represent
+the
+internal
+/
+/
+visual
+selection
+that
+the
+user
+sees
+and
+we
+can
+run
+our
+assertions
+on
+it
+.
+new_parent
+.
+moveBefore
+(
+text
+null
 )
 ;
 assert_equals
@@ -278,11 +486,108 @@ getSelection
 )
 .
 anchorNode
+text
 .
-textContent
+firstChild
+)
+;
+}
 "
+moveBefore
+should
+not
+reset
+selection
+with
+preceding
+text
+"
+)
+;
+promise_test
+(
+async
+t
+=
+>
+{
+document
+.
+body
+.
+innerHTML
+=
+<
+div
+id
+=
+old_parent
+>
+<
+span
+>
+This
+text
+does
+not
+move
+<
+/
+span
+>
+<
+span
+id
+=
+text
+>
 Text
-"
+<
+/
+span
+>
+<
+span
+>
+This
+text
+ALSO
+does
+not
+move
+<
+/
+span
+>
+<
+/
+div
+>
+<
+div
+id
+=
+new_parent
+>
+<
+/
+div
+>
+;
+getSelection
+(
+)
+.
+removeAllRanges
+(
+)
+;
+await
+select_range
+(
+t
+text
+text
 )
 ;
 new_parent
@@ -300,11 +605,9 @@ getSelection
 )
 .
 anchorNode
+text
 .
-textContent
-"
-Text
-"
+firstChild
 )
 ;
 }
@@ -313,8 +616,12 @@ moveBefore
 should
 not
 reset
-text
 selection
+with
+preceding
+and
+following
+text
 "
 )
 ;
