Bug 1926764 [wpt PR 48797] - mark attrs as tentative since they were added mid-year to interop-tracked files , a=testonly
Automatic update from web-platform-tests
mark attrs as tentative since they were added mid-year to interop-tracked files  (#48797)

* move new role/description/colindextext/rowindextext to tentative; add back in 2025
Closes https://github.com/web-platform-tests/interop-accessibility/issues/151

--

wpt-commits: 69d6994ff8d740311ed6d94f68a28ac2c1ec124e
wpt-pr: 48797

UltraBlame original commit: ba49e466a4e73a4954b181a031d5cf4293b8444a

--- a/testing/web-platform/tests/custom-elements/ElementInternals-accessibility.html
+++ b/testing/web-platform/tests/custom-elements/ElementInternals-accessibility.html
@@ -174,9 +174,23 @@ ariaColCount
 "
 ariaColIndex
 "
+/
+/
 "
 ariaColIndexText
 "
+/
+/
+tentative
+-
+>
+ElementInternals
+-
+accessibility
+.
+tentative
+.
+html
 "
 ariaColSpan
 "
@@ -189,9 +203,23 @@ ariaCurrent
 "
 ariaDescribedByElements
 "
+/
+/
 "
 ariaDescription
 "
+/
+/
+tentative
+-
+>
+ElementInternals
+-
+accessibility
+.
+tentative
+.
+html
 "
 ariaDetailsElements
 "
@@ -273,9 +301,23 @@ ariaRowCount
 "
 ariaRowIndex
 "
+/
+/
 "
 ariaRowIndexText
 "
+/
+/
+tentative
+-
+>
+ElementInternals
+-
+accessibility
+.
+tentative
+.
+html
 "
 ariaRowSpan
 "
