--- a/testing/web-platform/tests/custom-elements/reactions/AriaMixin-string-attributes.html
+++ b/testing/web-platform/tests/custom-elements/reactions/AriaMixin-string-attributes.html
@@ -228,6 +228,22 @@ div
 <
 script
 >
+/
+/
+tentative
+-
+>
+AriaMixin
+-
+string
+-
+attributes
+.
+tentative
+.
+html
+/
+/
 testReflectAttribute
 (
 '
@@ -433,6 +449,22 @@ Element
 '
 )
 ;
+/
+/
+tentative
+-
+>
+AriaMixin
+-
+string
+-
+attributes
+.
+tentative
+.
+html
+/
+/
 testReflectAttribute
 (
 '
@@ -502,6 +534,22 @@ Element
 '
 )
 ;
+/
+/
+tentative
+-
+>
+AriaMixin
+-
+string
+-
+attributes
+.
+tentative
+.
+html
+/
+/
 testReflectAttribute
 (
 '
@@ -1031,6 +1079,22 @@ Element
 '
 )
 ;
+/
+/
+tentative
+-
+>
+AriaMixin
+-
+string
+-
+attributes
+.
+tentative
+.
+html
+/
+/
 testReflectAttribute
 (
 '
