--- a/testing/web-platform/tests/html/dom/aria-attribute-reflection.html
+++ b/testing/web-platform/tests/html/dom/aria-attribute-reflection.html
@@ -1146,108 +1146,23 @@ reflects
 script
 >
 <
-div
-id
-=
-"
-colindextext
-"
-aria
+!
+-
 -
 colindextext
-=
-"
-x
-"
+-
 >
-<
-/
-div
->
-<
-script
->
-test
-(
-function
-(
-t
-)
-{
-var
-element
-=
-document
-.
-getElementById
-(
-"
-colindextext
-"
-)
-;
-assert_equals
-(
-element
-.
-ariaColIndexText
-"
-x
-"
-)
-;
-element
-.
-ariaColIndexText
-=
-"
-y
-"
-;
-assert_equals
-(
-element
-.
-getAttribute
-(
-"
 aria
 -
-colindextext
-"
-)
-"
-y
-"
-)
-;
-testNullable
-(
-element
-"
-ariaColIndexText
-"
-"
-aria
--
-colindextext
-"
-)
-;
-}
-"
-aria
--
-colindextext
 attribute
-reflects
+-
+reflection
 .
-"
-)
-;
-<
-/
-script
+tentative
+.
+html
+-
+-
 >
 <
 div
@@ -1458,116 +1373,23 @@ reflects
 script
 >
 <
-div
-id
-=
-"
-description
-"
-aria
+!
+-
 -
 description
-=
-"
-cold
-as
-ice
-"
+-
 >
-<
-/
-div
->
-<
-script
->
-test
-(
-function
-(
-t
-)
-{
-var
-element
-=
-document
-.
-getElementById
-(
-"
-description
-"
-)
-;
-assert_equals
-(
-element
-.
-ariaDescription
-"
-cold
-as
-ice
-"
-)
-;
-element
-.
-ariaDescription
-=
-"
-hot
-as
-fire
-"
-;
-assert_equals
-(
-element
-.
-getAttribute
-(
-"
 aria
 -
-description
-"
-)
-"
-hot
-as
-fire
-"
-)
-;
-testNullable
-(
-element
-"
-ariaDescription
-"
-"
-aria
--
-description
-"
-)
-;
-}
-"
-aria
--
-description
 attribute
-reflects
+-
+reflection
 .
-"
-)
-;
-<
-/
-script
+tentative
+.
+html
+-
+-
 >
 <
 div
@@ -3864,108 +3686,23 @@ reflects
 script
 >
 <
-div
-id
-=
-"
-rowindextext
-"
-aria
+!
+-
 -
 rowindextext
-=
-"
-x
-"
+-
 >
-<
-/
-div
->
-<
-script
->
-test
-(
-function
-(
-t
-)
-{
-var
-element
-=
-document
-.
-getElementById
-(
-"
-rowindextext
-"
-)
-;
-assert_equals
-(
-element
-.
-ariaRowIndexText
-"
-x
-"
-)
-;
-element
-.
-ariaRowIndexText
-=
-"
-y
-"
-;
-assert_equals
-(
-element
-.
-getAttribute
-(
-"
 aria
 -
-rowindextext
-"
-)
-"
-y
-"
-)
-;
-testNullable
-(
-element
-"
-ariaRowIndexText
-"
-"
-aria
--
-rowindextext
-"
-)
-;
-}
-"
-aria
--
-rowindextext
 attribute
-reflects
+-
+reflection
 .
-"
-)
-;
-<
-/
-script
+tentative
+.
+html
+-
+-
 >
 <
 div
