Bug 1927815 [wpt PR 48856] - De-duplicate nodes in Node::ConvertNodeUnionsIntoNodes., a=testonly
Automatic update from web-platform-tests
De-duplicate nodes in Node::ConvertNodeUnionsIntoNodes.

This makes calls to ParentNode.append() and similar methods that pass
the same node multiple times ignore all but the last occurrence of the
repeated node.  This matches the behavior when a temporary
DocumentFragment was used.

Fixed: 375493447
Change-Id: I36035e09bfc2a78f53f2ef63a1506b08d28bb9b7
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5967474
Reviewed-by: Dominic Farolino <domchromium.org>
Commit-Queue: David Baron <dbaronchromium.org>
Cr-Commit-Position: refs/heads/main{#1375292}

--

wpt-commits: c6819632bb53d030dc55287562e07eb9805d8dd5
wpt-pr: 48856

UltraBlame original commit: 71d4bed1c36bd80fb9220e18677cb643069741a5

--- a/testing/web-platform/tests/dom/nodes/ParentNode-append.html
+++ b/testing/web-platform/tests/dom/nodes/ParentNode-append.html
@@ -631,6 +631,103 @@ child
 '
 )
 ;
+test
+(
+function
+(
+)
+{
+const
+parent
+=
+node
+.
+cloneNode
+(
+)
+;
+const
+x
+=
+document
+.
+createElement
+(
+'
+x
+'
+)
+;
+const
+y
+=
+document
+.
+createElement
+(
+'
+y
+'
+)
+;
+parent
+.
+append
+(
+x
+y
+x
+)
+;
+assert_equals
+(
+parent
+.
+childNodes
+.
+length
+2
+)
+;
+assert_equals
+(
+parent
+.
+childNodes
+[
+0
+]
+y
+)
+;
+assert_equals
+(
+parent
+.
+childNodes
+[
+1
+]
+x
+)
+;
+}
+nodeName
++
+'
+.
+append
+(
+)
+with
+the
+same
+element
+twice
+.
+'
+)
+;
 }
 test_append
 (
